--- a/src/componets/chat/chat.css
+++ b/src/componets/chat/chat.css
@@ -37,7 +37,7 @@
   }
   #flex-container > div {
     flex: 1;
-    height: 40px;
+    height: 38px;
   }
   .message-display{
     flex-grow: 1;
@@ -66,7 +66,8 @@
     position: fixed;
     overflow-y: auto;
     overflow-x: hidden; 
-    width: 600px;
+    width: 900px;
+    margin-left: -12px;
   }
   
   .message-input {
