--- a/src/componets/chat/chat.css
+++ b/src/componets/chat/chat.css
@@ -69,7 +69,16 @@
     width: 900px;
     margin-left: -12px;
   }
-  
+  .profilePic{
+    border-radius: 50%;
+    margin-right: 5px;
+  }
+  .time{
+    opacity: 0.4;
+    font-size: 13px;
+    /* color: crimson; */
+    
+  }
   .message-input {
     flex-grow: 1;
     padding: 10px;
@@ -82,6 +91,13 @@
     /* background-color: #ADD8E6; */
     margin-right: 30px; 
     color: black;
+  }
+  .userName{
+    cursor: pointer;
+  }
+  .textcolor{
+    color: black;
+    text-decoration:underline;
   }
   .receiver-message {
     text-align: left;
